@@ -1093,6 +1093,32 @@ public class BeanWrapperTests extends TestCase {
 		assertEquals(Double.MAX_VALUE, bean.getMyDouble().doubleValue(), 0.001);
 
 	}
+	
+	public void testAlternativesForTypo() {
+		IntelliBean ib = new IntelliBean();		
+		BeanWrapper bw = new BeanWrapperImpl(ib);
+
+		try {
+			bw.setPropertyValue("names", "Alef");
+		} catch (NotWritablePropertyException e) {
+			e.printStackTrace();
+			assertNotNull("Possible matches not determined", e.getPossibleMatches());
+			assertEquals("Invalid amount of alternatives", 1, e.getPossibleMatches().length);
+		}	
+	}
+	
+	public void testAlternativesForTypos() {
+		IntelliBean ib = new IntelliBean();		
+		BeanWrapper bw = new BeanWrapperImpl(ib);
+
+		try {
+			bw.setPropertyValue("mystring", "Arjen");
+		} catch (NotWritablePropertyException e) {
+			e.printStackTrace();
+			assertNotNull("Possible matches not determined", e.getPossibleMatches());
+			assertEquals("Invalid amount of alternatives", 3, e.getPossibleMatches().length);
+		}	
+	}
 
 
 	private static class DifferentTestBean extends TestBean {
@@ -1303,5 +1329,19 @@ public class BeanWrapperTests extends TestCase {
 		public void setMyDouble(Double myDouble) {
 			this.myDouble = myDouble;
 		}
+	}
+	
+	private static class IntelliBean {
+		
+		public void setName(String name) {}
+		
+		public void setMyString(String string) {}
+		
+		public void setMyStrings(String string) {}
+		
+		public void setMyStriNg(String string) {}
+		
+		public void setMyStringss(String string) {}
+		
 	}
 }
